<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_gcmmessage_view">GCMMessageView</string>
    <string name="menu_settings">Settings</string>
    <string name="regbutton">Register Device</string>
    <string name="msglbl">"Message : "</string>
    
    <string name="app_name">ProjectPrototype</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="advanchip_string">AdvanChip</string>
    <string name="id_string">ID</string>
    <string name="pw_string">PW</string>
    <string name="id_input_string">Input ID here</string>
    <string name="pw_input_string">Input PW here</string>
    <string name="login_string">Log In</string>
    <string name="lights_string">Lights</string>
    <string name="toggle_turn_on">On</string>
    <string name="toggle_turn_off">Off</string>
</resources>
